[project]
name = "coding-agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.4",
    "boto3==1.38.8",
    "botocore==1.38.8",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==44.0.3",
    "dataclasses-json==0.6.7",
    "deprecated==1.2.18",
    "distro==1.9.0",
    "frozenlist==1.6.0",
    "gitdb==4.0.12",
    "gitpy==0.0.5",
    "gitpython==3.1.44",
    "google==3.0.0",
    "google-api-core==2.24.2",
    "google-api-python-client==2.168.0",
    "google-auth==2.39.0",
    "google-auth-httplib2==0.2.0",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.1 ; (python_full_version < '3.14' and platform_machine == 'AMD64') or (python_full_version < '3.14' and platform_machine == 'WIN32') or (python_full_version < '3.14' and platform_machine == 'aarch64') or (python_full_version < '3.14' and platform_machine == 'amd64') or (python_full_version < '3.14' and platform_machine == 'ppc64le') or (python_full_version < '3.14' and platform_machine == 'win32') or (python_full_version < '3.14' and platform_machine == 'x86_64')",
    "h11==0.16.0",
    "html2text==2025.4.15",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "iniconfig==2.1.0",
    "jiter==0.9.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==0.3.24",
    "langchain-community==0.3.22",
    "langchain-core==0.3.56",
    "langchain-openai==0.3.14",
    "langchain-text-splitters==0.3.8",
    "langsmith==0.3.37",
    "markdown-it-py==3.0.0",
    "marshmallow==3.26.1",
    "mdurl==0.1.2",
    "multidict==6.4.3",
    "mypy-extensions==1.1.0",
    "numpy==2.2.5",
    "openai==1.76.0",
    "orjson==3.10.16 ; platform_python_implementation != 'PyPy'",
    "packaging==24.2",
    "pandas==2.2.3",
    "pluggy==1.5.0",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==6.30.2",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.9.1",
    "pygithub==2.6.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pynacl==1.5.0",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==14.0.0",
    "rsa==4.9.1",
    "ruff==0.11.8",
    "s3transfer==0.12.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "slack-sdk==3.35.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqlalchemy==2.0.40",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "typer==0.15.3",
    "typing-extensions==4.13.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "wrapt==1.17.2",
    "yarl==1.20.0",
    "zstandard==0.23.0",
]
